--- a/tutorial/label.ipynb
+++ b/tutorial/label.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select ROIs:\n",
+      "1. Select left eye, then press enter\n",
+      "2. Select right eye, then press enter\n",
+      "3. Select swim bladder, then press enter\n",
+      "4. Press ESC\n",
+      "Label tail:\n",
+      "1. Draw tail on a selected frame\n",
+      "2. Press enter to save labels\n",
+      "\n",
+      "Press ESC when finish labeling all the frames needed\n",
+      "Frame 847 captured.\n",
+      "Frame 1064 captured.\n",
+      "Labels of sample is saved to C:/Users/kclam/deeplabcut-zebrafish/models/larvalzebrafish_topview-semmelhacklab-2020-05-14/labeled-data/sample\n"
+     ]
+    }
+   ],
    "source": [
     "from zfishtools import DLCLabeler\n",
     "labeler = DLCLabeler()"
